minor changes in the unimod parser
